--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Żabka szkoła pływania</title>
 
-    <link rel="stylesheet" href="/dist/css/main.min.css">
+    <link rel="stylesheet" href="dist/css/main.min.css">
     <script src="https://kit.fontawesome.com/1b654c37e3.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap" rel="stylesheet">
 
