--- a/places1.html
+++ b/places1.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="/dist/css/main.min.css">
+    <link rel="stylesheet" href="dist/css/main.min.css">
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
