--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <div class="logo-container">
                 <!-- <div class="logo-container__belt"></div> -->
-                <img src="/dist/img/logo-removebg-preview.png" alt="" class="logo-container__logo-img">
+                <img src="dist/img/logo-removebg-preview.png" alt="" class="logo-container__logo-img">
                 <div class="logo-container__belt"></div>
             </div>
             <h1 class="header-bgc-container__h1-header" data-aos="fade-up" data-aos-delay="100">Innowacyjne elementy
@@ -35,7 +35,7 @@
 
             <div class="video-container">
                 <video autoplay loop muted playsinline>
-                    <source src="/dist/video/4941354-hd_1920_1080_25fps.mp4" type="video/mp4">
+                    <source src="dist/video/4941354-hd_1920_1080_25fps.mp4" type="video/mp4">
 
                 </video>
 
@@ -64,7 +64,7 @@
               <a href="#dreams" class="nav-desktop__a-desktop">O nas</a>
 
                 <a href="#offers" class="nav-desktop__a-desktop">Oferta</a>
-                <span class="nav-span"><img class="nav-img" src="/dist/img/logo-removebg-preview.png" alt=""></span>
+                <span class="nav-span"><img class="nav-img" src="dist/img/logo-removebg-preview.png" alt=""></span>
                 <a href="#aboutus" class="nav-desktop__a-desktop">Produkty</a>
                 <a href="places1.html" class="nav-desktop__a-desktop">Kontakt</a>
             </nav>
@@ -78,7 +78,7 @@
 
         <div class="dreams__box">
             <div class="dreams__box-img dreams__box-img--right">
-                <img src="/dist/img/IMG-20241124-WA0028.jpg" alt="Domki nad oceanem na tle góry" class="dreams__img"
+                <img src="dist/img/IMG-20241124-WA0028.jpg" alt="Domki nad oceanem na tle góry" class="dreams__img"
                     data-aos="fade-left" data-aos-delay="100">
             </div>
             <div class="dreams__box-text dreams__box-text--right" data-aos="fade-right" data-aos-delay="100">
@@ -96,7 +96,7 @@
         </div>
         <div class="dreams__box">
             <div class="dreams__box-img dreams__box-img--left">
-                <img src="/dist/img/IMG-20241124-WA0024.jpg" alt="Domki nad oceanem na tle góry"
+                <img src="dist/img/IMG-20241124-WA0024.jpg" alt="Domki nad oceanem na tle góry"
                     class="dreams__img img2" data-aos="fade-right" data-aos-delay="100">
             </div>
             <div class="dreams__box-text dreams__box-text--right" data-aos="fade-left" data-aos-delay="100">
@@ -134,7 +134,7 @@
 
                 <div class="offers__option" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
 
-                    <img src="/dist/img/IMG-20241124-WA0002.jpg" alt="Oferta" class="offers__option-img">
+                    <img src="dist/img/IMG-20241124-WA0002.jpg" alt="Oferta" class="offers__option-img">
                     <div class="offers__option-info">
                         <h3 class="offers__option-heading" style="color:#59c3ed;">Kanały i kształtki prostokątne</h3>
                         <p class="offers__option-text">
@@ -151,7 +151,7 @@
                     </div>
                 </div>
                 <div class="offers__option" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
-                    <img src="/dist/img/IMG-20241124-WA0051.jpg" alt="Wypad z kumplami"
+                    <img src="dist/img/IMG-20241124-WA0051.jpg" alt="Wypad z kumplami"
                         class="offers__option-img offers__option-img--right">
                     <div class="offers__option-info">
                         <h3 class="offers__option-heading" style="color:#59c3ed;">Inne</h3>
@@ -189,79 +189,79 @@
 
             <div class="row">
                 <div class="about-us-box" data-aos="fade-up">
-                    <img src="/dist/img/produkty/thumb_product_big_1542659873KANAL-removebg-preview.png"
+                    <img src="dist/img/produkty/thumb_product_big_1542659873KANAL-removebg-preview.png"
                         alt="zajęcia dla niemowlaków" style="width: 150px; height: 150px; object-fit: cover;">
                     <p class="aboutus-card-tittle">kanały wentylacyjne</p>
                 </div>
                 <div class="about-us-box" data-aos="fade-up">
-                    <img src="/dist/img/produkty/kanaly-prostokatne-removebg-preview.png"
+                    <img src="dist/img/produkty/kanaly-prostokatne-removebg-preview.png"
                         alt="zajęcia oswajające z wodą" style="width: 150px; height: 150px; object-fit: cover;">
                     <p class="aboutus-card-tittle">kolana</p>
                 </div>
                 <div class="about-us-box" data-aos="fade-up">
-                    <img src="/dist/img/produkty/xplo-wentylacja-trojnik-asymetryczny-42918-removebg-preview.png"
+                    <img src="dist/img/produkty/xplo-wentylacja-trojnik-asymetryczny-42918-removebg-preview.png"
                         alt="zajęcia nauki pływania" style="width: 150px; height: 150px; object-fit: cover;">
                     <p class="aboutus-card-tittle">trójniki</p>
                 </div>
                 <div class="about-us-box" data-aos="fade-up">
-                    <img src="/dist/img/produkty/dyfuzor-symetryczny-RS-removebg-preview.png"
+                    <img src="dist/img/produkty/dyfuzor-symetryczny-RS-removebg-preview.png"
                         alt="zajęcia dla dorosłych" style="width: 150px; height: 150px; object-fit: cover;">
                     <p class="aboutus-card-tittle">dyfuzory</p>
                 </div>
                 <div class="about-us-box" data-aos="fade-up">
-                    <img src="/dist/img/produkty/Przepustnica-wielo-pł-zębatkowa-PWP-removebg-preview.png"
+                    <img src="dist/img/produkty/Przepustnica-wielo-pł-zębatkowa-PWP-removebg-preview.png"
                         alt="zajęcia korekcyjne" style="width: 150px; height: 150px; object-fit: cover;">
                     <p class="aboutus-card-tittle">przepustnice wielopłaszczyznowe</p>
                 </div>
                 <div class="about-us-box" data-aos="fade-up">
-                    <img src="/dist/img/produkty/pja_przepustnica_prostokatna_jednoplaszczyznowa_1-removebg-preview.png"
+                    <img src="dist/img/produkty/pja_przepustnica_prostokatna_jednoplaszczyznowa_1-removebg-preview.png"
                         alt="zajęcia indywidualne" style="width: 150px; height: 150px; object-fit: cover;">
                     <p class="aboutus-card-tittle">przepustnice jednopłaszczyznowe</p>
                 </div>
                 <div class="about-us-box" data-aos="fade-up">
-                    <img src="/dist/img/produkty/cokol-nieizolowany-MCPN-1-1024x680-removebg-preview.png"
+                    <img src="dist/img/produkty/cokol-nieizolowany-MCPN-1-1024x680-removebg-preview.png"
                         alt="zajęcia grupowe" style="width: 150px; height: 150px; object-fit: cover;">
                     <p class="aboutus-card-tittle">Cokoły dachowe skośne</p>
                 </div>
 
                 <div class="about-us-box" data-aos="fade-up">
-                    <img src="/dist/img/produkty/Cokol-dachowy-removebg-preview.png" alt="trening personalne"
+                    <img src="dist/img/produkty/Cokol-dachowy-removebg-preview.png" alt="trening personalne"
                         style="width: 150px; height: 150px; object-fit: cover;">
                     <p class="aboutus-card-tittle">Cokoły dachowe proste</p>
                 </div>
                 <div class="about-us-box" data-aos="fade-up">
-                    <img src="/dist/img/produkty\/pol_pl_Podstawa-dachowa-okragla-B2-O100mm-3028_1-removebg-preview  cut.png"
+                    <img src="dist/img/produkty\/pol_pl_Podstawa-dachowa-okragla-B2-O100mm-3028_1-removebg-preview  cut.png"
                         alt="obozy, kolonie, wakacyjne zajęcia, imprezy grupowe na basenie"
                         style="width: 150px; height: 150px; object-fit: cover;">
                     <p class="aboutus-card-tittle">podstawy dachowe okrągłe</p>
                 </div>
                 <div class="about-us-box" data-aos="fade-up">
-                    <img src="/dist/img/produkty/Podstawa-dachowa-A-Wentylacja-Irmark-removebg-preview.png"
+                    <img src="dist/img/produkty/Podstawa-dachowa-A-Wentylacja-Irmark-removebg-preview.png"
                         alt="przygotowanie pod zawody" style="width: 150px; height: 150px; object-fit: cover;">
                     <p class="aboutus-card-tittle">podstawy dachowe prostokątne</p>
                 </div>
                 <div class="about-us-box" data-aos="fade-up">
-                    <img src="/dist/img/produkty/TAGF-podstawa-dachowa-wentylacyjna-do-dachow-ze-spadkiem.9dcbd1cde5c207599f649fa727bc80e713746-removebg-preview.png"
+                    <img src="dist/img/produkty/TAGF-podstawa-dachowa-wentylacyjna-do-dachow-ze-spadkiem.9dcbd1cde5c207599f649fa727bc80e713746-removebg-preview.png"
                         alt="aqua aerobik" style="width: 150px; height: 150px; object-fit: cover;">
                     <p class="aboutus-card-tittle">połączenia elastyczne</p>
                 </div>
                 <div class="about-us-box" data-aos="fade-up">
-                    <img src="/dist/img/produkty/krociec_elastyczny_ke-removebg-preview.png" alt="aqua aerobik"
+                    <img src="dist/img/produkty/krociec_elastyczny_ke-removebg-preview.png" alt="aqua aerobik"
                         style="width: 150px; height: 150px; object-fit: cover;">
                     <p class="aboutus-card-tittle">tłumiki akustyczne</p>
                 </div>
                 <div class="about-us-box" data-aos="fade-up">
-                    <img src="/dist/img/produkty/807fe23fc90eea7ac5a3cbad68525474-removebg-preview.png"
+                    <img src="dist/img/produkty/807fe23fc90eea7ac5a3cbad68525474-removebg-preview.png"
                         alt="aqua aerobik" style="width: 150px; height: 150px; object-fit: cover;">
                     <p class="aboutus-card-tittle">tłumiki akustyczne</p>
                 </div>
                 <div class="about-us-box" data-aos="fade-up">
-                    <img src="/dist/img/produkty//okabell-removebg-preview.png" alt="aqua aerobik"
+                    <img src="dist/img/produkty//okabell-removebg-preview.png" alt="aqua aerobik"
                         style="width: 150px; height: 150px; object-fit: cover;">
                     <p class="aboutus-card-tittle">płaszcze ochronne</p>
                 </div>
                 <div class="about-us-box" data-aos="fade-up">
-                    <img src="/dist/img/produkty/3cdbb0fdce0837a09d16b7a91683eb15-removebg-preview.png"
+                    <img src="dist/img/produkty/3cdbb0fdce0837a09d16b7a91683eb15-removebg-preview.png"
                         alt="aqua aerobik" style="width: 150px; height: 150px; object-fit: cover;">
                     <p class="aboutus-card-tittle">czerpnie</p>
                 </div>
@@ -348,7 +348,7 @@
     <p class="footer__bottom-text"> &copy; <span class="footer__year"></span> Designed by Maksymilian Kowalski </p>
 
 </footer>
-    <script src="/src/js/script.js"></script>
+    <script src="src/js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
