--- a/places1.html
+++ b/places1.html
@@ -24,7 +24,7 @@
             <div class="logo-container">
                 <!-- <div class="logo-container__belt"></div> -->
                 <a href="index.html">
-                    <img src="/dist/img/logo-removebg-preview.png" alt="Logo" class="logo-container__logo-img">
+                    <img src="dist/img/logo-removebg-preview.png" alt="Logo" class="logo-container__logo-img">
                 </a>
                 <div class="logo-container__belt"></div>
             </div>
@@ -79,7 +79,7 @@
                 <a href="index.html#dreams" class="nav-desktop__a-desktop">O nas</a>
 
                 <a href="index.html#offers" class="nav-desktop__a-desktop">Oferta</a>
-                <span class="nav-span"><img class="nav-img" src="/dist/img/logo-removebg-preview.png" alt=""></span>
+                <span class="nav-span"><img class="nav-img" src="dist/img/logo-removebg-preview.png" alt=""></span>
                 <a href="index.html#aboutus" class="nav-desktop__a-desktop">Produkty</a>
 
                 <a href="" class="nav-desktop__a-desktop">Kontakt</a>
@@ -180,9 +180,9 @@
 
 </footer>
 
-    <script src="/src/js/script.js"></script>
+    <script src="src/js/script.js"></script>
 
-    <script src="/dist/js/script.min.js"></script>
+    <script src="dist/js/script.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
