--- a/index.html
+++ b/index.html
@@ -26,13 +26,20 @@
             <h1 class="header-bgc-container__h1-header" data-aos="fade-up" data-aos-delay="100">Innowacyjne elementy
                 wentylacyjne i <span style="color:#59c3ed;">profesjonalna</span> termoizolacja
 
-                <!-- - zapewniamy wydajność i oszczędność Twoich instalacji. -->
+                - zapewniamy wydajność i oszczędność Twoich instalacji.
 
 
 
 
             </h1>
+            <div class="contact-header-container" data-aos="fade-up" data-aos-delay="150">
+                <p class="contact-header-container_p"><a href="#tel:504804448">Produkcja</a></p>
 
+                <p class="contact-header-container_p"><a href="#mailto:rtj.izolator@op.pl">Zobacz naszą ofertę</a></p>
+                <a href="#dreams" class="location-button">
+                    Zejdź niżej<span class="arrow">&#8595;</span>
+                </a>
+            </div>
             <div class="video-container">
                 <video autoplay loop muted playsinline>
                     <source src="dist/video/4941354-hd_1920_1080_25fps.mp4" type="video/mp4">
@@ -138,15 +145,13 @@
                     <div class="offers__option-info">
                         <h3 class="offers__option-heading" style="color:#59c3ed;">Kanały i kształtki prostokątne</h3>
                         <p class="offers__option-text">
-                            - standardowe wykonanie z blachy ocynkowanej grubości 0,5 i 0,7 mm
+                            Produkcję elementów z blachy ocynkowanej o grubości 0,5 mm i 0,7 mm w standardowym wykonaniu.
                             <br><br>
-                            - możliwość zamówienia różnych rodzajów kształtek
+                            Możliwość zamówienia różnorodnych rodzajów kształtek, dopasowanych do Twoich potrzeb.
                             <br><br>
-                            - wykonania specjalne ze stali nierdzewnej, aluminium
+                            Specjalne realizacje z materiałów takich jak stal nierdzewna czy aluminium.
                         </p>
-                        <p class="offers__option-text"> Jeśli masz obawy przed wodą, bądź nie wiesz na jakim poziomie
-                            jesteś warto zdecydować się na zajęcia indywidualne. Oczywiście w każdej chwili możesz
-                            dołączyć do grupy.</p>
+                        <p class="offers__option-text">Zapewniamy wysoką jakość oraz elastyczność w dostosowywaniu oferty do wymagań klientów.</p>
                         <!-- <button class="offers__option-btn btn-special-animation">Wybierz</button> -->
                     </div>
                 </div>
