--- a/places1.html
+++ b/places1.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontakt</title>
+   
+    <title>RJT IZOLATOR Szczecin</title>
+    <meta name="description"
+    content="Wentylacja Szczecin, termoizolacja Szczecin">
     <script src="https://kit.fontawesome.com/1b654c37e3.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap" rel="stylesheet">
 
