--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Żabka szkoła pływania</title>
-
+   
+    <title>RJT IZOLATOR Szczecin</title>
+    <meta name="description"
+    content="Wentylacja Szczecin, termoizolacja Szczecin">
     <link rel="stylesheet" href="dist/css/main.min.css">
     <script src="https://kit.fontawesome.com/1b654c37e3.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap" rel="stylesheet">
