--- a/index.html
+++ b/index.html
@@ -273,6 +273,60 @@
         </div>
     </section>
 
+    <section class="bestRestaurans" id="bestRestaurans">
+        <div 
+            class="slider">
+            <div class="slides">
+                <img class="slide active" src="dist/img/sliderImg/1.jpg" alt=""
+                    data-title="Doświadczenie"
+                    data-description="Solidna reputacja i zadowoleni klienci" data-link="">
+                <img class="slide" src="dist/img/sliderImg/2.jpg" alt=""
+                    data-title="Wysoka jakość"
+                    data-description="Wykorzystujemy wysokiej jakości materiały oraz nowoczesne technologie produkcji i izolacji"
+                    data-link="">
+                <img class="slide" src="dist/img/sliderImg/3.jpg" alt="" data-title="Efektywność energetyczna"
+                    data-description="Produkty i usługi firmy przyczyniają się do zmniejszenia zużycia energii, co jest istotne zarówno dla oszczędności, jak i ochrony środowiska"
+                    data-link="https://www.caffe-venezia.pl">
+                <img class="slide" src="dist/img/sliderImg/4.jpg" alt=""
+                    data-title="Doświadczenie"
+                    data-description="Solidna reputacja i zadowoleni klienci"
+                    data-link="https://www.karczmapodkogutem.eu">
+                <img class="slide" src="dist/img/sliderImg/4.jpg" alt="Karczma Świnoujście"
+                data-title="Wysoka jakość"
+                data-description="Wykorzystujemy wysokiej jakości materiały oraz nowoczesne innowacyjne technologie produkcji i izolacji"
+                    data-link="https://www.karczmapodkogutem.eu">
+                <img class="slide" src="dist/img/sliderImg/5.jpg" alt=""
+                data-title="Efektywność energetyczna"
+                data-description="Produkty i usługi firmy przyczyniają się do zmniejszenia zużycia energii, co jest istotne zarówno dla oszczędności, jak i ochrony środowiska"
+                    data-link="http://walychrobrego.com/columbus">
+                <img class="slide" src="dist/img/sliderImg/6.jpg" alt="Colorado Steakhouse"
+                data-title="Wysoka jakość"
+                data-description="Wykorzystujemy wysokiej jakości materiały oraz nowoczesne innowacyjne technologie produkcji i izolacji"
+                    data-link="http://walychrobrego.com/colorado">
+                <img class="slide" src="dist/img/sliderImg/8.jpg" alt=""
+                   data-title="Doświadczenie"
+                    data-description="Solidna reputacja i zadowoleni klienci"
+                    data-link="http://walychrobrego.com/colorado">
+            </div>
+            <div style="display: flex;flex-direction: column; align-items: center;" class="content">
+                <h1 class="title"></h1>
+                <p class="description"></p>
+                <a href="#" class="cta-link">Tel. 504 804 448</a>
+            </div>
+
+            <div class="indicators">
+                <div class="indicator active" data-index="0"></div>
+                <div class="indicator" data-index="1"></div>
+                <div class="indicator" data-index="2"></div>
+                <div class="indicator" data-index="3"> </div>
+                <div class="indicator" data-index="4"></div>
+                <div class="indicator" data-index="5"></div>
+                <div class="indicator" data-index="6"></div>
+                <div class="indicator" data-index="7"></div>
+                
+            </div>
+        </div>
+    </section>
 
     <section class="about-us">
         <h2 class="about-us__h2-about-us" data-aos="zoom-in-up" data-aos-delay="300">Skontaktuj się z nami</h2>
@@ -352,7 +406,7 @@
     <p class="footer__bottom-text"> &copy; <span class="footer__year"></span> Designed by Maksymilian Kowalski </p>
 
 </footer>
-    <script src="src/js/script.js"></script>
+    <script src="dist/js/script.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
