--- a/places1.html
+++ b/places1.html
@@ -183,9 +183,9 @@
 
 </footer>
 
-    <script src="src/js/script.js"></script>
 
-    <script src="dist/js/script.min.js"></script>
+
+    <script src="/dist/js/script.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
