--- a/index.html
+++ b/index.html
@@ -100,16 +100,12 @@
         </div>
         <div class="dreams__box">
             <div class="dreams__box-img dreams__box-img--left">
-                <img src="dist/img/IMG-20241124-WA0024.jpg" alt="Domki nad oceanem na tle góry"
+                <img src="dist/img/IMG-20241124-WA0033.jpg" alt="Domki nad oceanem na tle góry"
                     class="dreams__img img2" data-aos="fade-right" data-aos-delay="100">
             </div>
             <div class="dreams__box-text dreams__box-text--right" data-aos="fade-left" data-aos-delay="100">
-                <h3 class="dreams__title" style="color:#59c3ed;">Zespół</h3>
-                <p class="dreams__text">Nasz zespół tworzą wysoko wykwalifikowani specjaliści z wieloletnim
-                    doświadczeniem, którzy dbają o każdy etap realizacji – od doradztwa technicznego, przez produkcję
-                    elementów wentylacyjnych, aż po staranne wykonanie termoizolacji. Dzięki ich zaangażowaniu, wiedzy i
-                    profesjonalizmowi możemy zapewnić naszym Klientom najwyższy standard usług oraz długotrwałą,
-                    bezawaryjną eksploatację instalacji.
+                <h3 class="dreams__title" style="color:#59c3ed;">Realizacje</h3>
+                <p class="dreams__text">Firma RTJ Izolator ma na swoim koncie wiele realizacji dla różnych branż, w tym przemysłu, budownictwa, centrów handlowych i obiektów użyteczności publicznej. Dzięki elastycznemu podejściu do potrzeb klienta, każde zlecenie jest dopasowane do specyficznych wymagań budowlanych i technicznych.
                 </p>
             </div>
         </div>
@@ -142,7 +138,7 @@
                     <div class="offers__option-info">
                         <h3 class="offers__option-heading" style="color:#59c3ed;">Produkcja kanałów wentylacyjnych</h3>
                         <p class="offers__option-text">
-                            ◦ Kanały okrągłe, prostokątne i elastyczne dostosowane do indywidualnych potrzeb klienta.
+                            Kanały okrągłe, prostokątne i elastyczne dostosowane do indywidualnych potrzeb klienta.
                            
                           
                             <br><br>
